--- a/Generalization_Server/Generalization_Server.vcxproj.filters
+++ b/Generalization_Server/Generalization_Server.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="GeneralizationDataBaseLoadFuncs.cpp">
       <Filter>Source Files\database</Filter>
     </ClCompile>
+    <ClCompile Include="GeneralizationProgramOpt.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GeneralizationFile.h">
@@ -100,6 +103,9 @@
     </ClInclude>
     <ClInclude Include="GeneralizationDataBaseLoadFuncs.h">
       <Filter>Header Files\database</Filter>
+    </ClInclude>
+    <ClInclude Include="GeneralizationProgramOpt.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
