--- a/Generalization_Server/Generalization_Server.vcxproj.filters
+++ b/Generalization_Server/Generalization_Server.vcxproj.filters
@@ -40,6 +40,12 @@
     <Filter Include="Source Files\database">
       <UniqueIdentifier>{5b75f77d-80e5-48dc-920c-a3244590f16a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\log">
+      <UniqueIdentifier>{f73cdaa2-51ee-447f-ab89-a65e1d097299}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\log">
+      <UniqueIdentifier>{81071cfa-28df-483c-9046-4901c0fd754f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -71,6 +77,9 @@
     </ClCompile>
     <ClCompile Include="GeneralizationProgramOpt.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneralizationLogging.cpp">
+      <Filter>Source Files\log</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -106,6 +115,9 @@
     </ClInclude>
     <ClInclude Include="GeneralizationProgramOpt.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GeneralizationLogging.h">
+      <Filter>Header Files\log</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
