Some fixes was implemented
Signed-off-by: Dmitry Gladkov <dgladkov1709@gmail.com>

--- a/Generalization_Server/Generalization_Server.vcxproj
+++ b/Generalization_Server/Generalization_Server.vcxproj
@@ -93,7 +93,7 @@
       <SDLCheck>true</SDLCheck>
       <AdditionalUsingDirectories>System</AdditionalUsingDirectories>
       <AdditionalIncludeDirectories>C:\Users\dgladkov\Documents\Education\database\INCLUDE;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <OpenMPSupport>false</OpenMPSupport>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
